NEXT-1390 - add country states

--- a/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.scss
+++ b/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.scss
@@ -3,4 +3,12 @@
         align-self: center;
         margin: 0;
     }
+
+    .sw-card__toolbar .sw-simple-search-field {
+            margin-bottom: 0;
+    }
+
+    .sw-settings-country-detail__link {
+        cursor: pointer;
+    }
 }
