NEXT-2692 - Remove listing mixin from category module

--- a/Resources/administration/src/module/sw-category/view/sw-category-detail-base/sw-category-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-category/view/sw-category-detail-base/sw-category-detail-base.html.twig
@@ -320,7 +320,7 @@
                             v-else
                             slot="grid"
                             :title="$tc('sw-category.base.products.productAssignmentEmptyStateTitle')"
-                            :subline="$tc('sw-category.base.products.productAssignmentEmptyStateSubline')"
+                            subline="sw-category.base.products.productAssignmentEmptyStateSubline"
                             icon="default-package-closed">
                         </sw-empty-state>
                     {% endblock %}
