--- a/Resources/administration/src/module/sw-settings-store/page/sw-settings-store/sw-settings-store.html.twig
+++ b/Resources/administration/src/module/sw-settings-store/page/sw-settings-store/sw-settings-store.html.twig
@@ -1,50 +1,49 @@
 {% block sw_settings_store %}
-    <sw-page class="sw-settings-store">
+    {% block sw_settings_store_index %}
+        <sw-page class="sw-settings-store">
 
-        {% block sw_settings_store_smart_bar_header %}
-            <template slot="smart-bar-header">
-                {% block sw_settings_store_smart_bar_header_title %}
-                    <h2>
-                        {% block sw_settings_store_smart_bar_header_title_text %}
-                            {{ $tc('sw-settings.index.title') }}
-                            <sw-icon name="small-arrow-medium-right" small></sw-icon>
-                            {{ $tc('sw-settings-store.general.textHeadline') }}
-                        {% endblock %}
-                    </h2>
-                {% endblock %}
-            </template>
-        {% endblock %}
+            {% block sw_settings_store_search_bar %}
+                <template slot="search-bar">
+                    <sw-search-bar>
+                    </sw-search-bar>
+                </template>
+            {% endblock %}
 
-        {% block sw_settings_store_smart_bar_actions %}
-            <template slot="smart-bar-actions">
-                {% block sw_settings_store_smart_bar_actions_add %}
-                    <sw-button variant="primary" @click="onClickSave()">
+            {% block sw_settings_store_smart_bar_header %}
+                <template slot="smart-bar-header">
+                    {% block sw_settings_store_smart_bar_header_title %}
+                        <h2>
+                            {% block sw_settings_store_smart_bar_header_title_text %}
+                                    {{ $tc('sw-settings.index.title') }}
+                                    <sw-icon name="small-arrow-medium-right" small>
+                                    </sw-icon>
+                                    {{ $tc('sw-settings-store.general.textHeadline') }}
+                            {% endblock %}
+                        </h2>
+                    {% endblock %}
+                </template>
+            {% endblock %}
+
+            {% block sw_settings_store_smart_bar_actions %}
+                <template slot="smart-bar-actions">
+                    {% block sw_settings_store_actions_save %}
+                    <sw-button variant="primary"
+                               class="sw-settings-store__save-action"
+                               @click="onSave">
                         {{ $tc('sw-settings-store.general.buttonSave') }}
                     </sw-button>
-                {% endblock %}
-            </template>
-        {% endblock %}
-
-        {% block sw_settings_store_content %}
-            <template slot="content">
-                <sw-card-view>
-                    {% block sw_settings_store_content_inner %}
-                    <sw-card :title="$tc('sw-settings-store.detail.titleCard')">
-                        <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
-
-                            {% block sw_settings_language_detail_content_field_name %}
-                            <sw-field type="text"
-                                      :label="$tc('sw-settings-store.detail.labelHost')"
-                                      :placeholder="$tc('sw-settings-store.detail.placeholderHost')"
-                                      validation="required"
-                                      v-model="settings.value">
-                            </sw-field>
-                            {% endblock %}
-                        </sw-container>
-                    </sw-card>
                     {% endblock %}
+                </template>
+            {% endblock %}
+
+            {% block sw_settings_store_content %}
+                <sw-card-view slot="content">
+                   <sw-system-config
+                            ref="systemConfig"
+                            domain="core.store">
+                   </sw-system-config>
                 </sw-card-view>
-            </template>
-        {% endblock %}
-    </sw-page>
+            {% endblock %}
+        </sw-page>
+    {% endblock %}
 {% endblock %}
