NEXT-2692 - Add missing snippet & category link description text

--- a/Resources/administration/src/module/sw-category/view/sw-category-detail-base/sw-category-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-category/view/sw-category-detail-base/sw-category-detail-base.html.twig
@@ -90,6 +90,31 @@
 
         {% block sw_category_detail_link %}
             <sw-card v-if="category.type === 'link'" :title="$tc('sw-category.base.link.title')" :isLoading="isLoading">
+
+                {% block sw_category_detail_link_desc_external %}
+                    <div class="sw-category-detail-base__link-section">
+                        <p>{{ $tc('sw-category.base.link.externalDesc') }}</p>
+                        <p>
+                            {{ $tc('sw-category.base.link.example') }}
+                            <span class="sw-category-detail-base__link-element">
+                                https://www.shopware.com
+                            </span>
+                        </p>
+                    </div>
+                {% endblock %}
+
+                {% block sw_category_detail_link_desc_internal %}
+                    <div class="sw-category-detail-base__link-section">
+                        <p>{{ $tc('sw-category.base.link.internalDesc') }}</p>
+                        <p>
+                            {{ $tc('sw-category.base.link.example') }}
+                            <span class="sw-category-detail-base__link-element">
+                                {{ $tc('sw-category.base.link.internalExampleText') }}
+                            </span>
+                        </p>
+                    </div>
+                {% endblock %}
+
                 {% block sw_category_detail_link_field %}
                     <sw-field
                         v-model="category.externalLink"
@@ -97,6 +122,7 @@
                         :placeholder="$tc('sw-category.base.general.linkLabel')">
                     </sw-field>
                 {% endblock %}
+
             </sw-card>
         {% endblock %}
 
