--- a/Resources/administration/src/module/sw-product/component/sw-product-price-form/sw-product-price-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-price-form/sw-product-price-form.html.twig
@@ -30,6 +30,7 @@
                 :price="product.price"
                 :taxRate="productTaxRate"
                 :currency="defaultCurrency"
+                rootPointer="product"
                 validation="required"
                 @calculating="priceIsCalculating">
             </sw-price-field>
