--- a/Resources/administration/src/app/component/form/field-base/sw-base-field/sw-base-field.html.twig
+++ b/Resources/administration/src/app/component/form/field-base/sw-base-field/sw-base-field.html.twig
@@ -8,5 +8,5 @@
         <sw-help-text class="sw-field__help-text" :text="helpText" v-if="helpText"></sw-help-text>
     </div>
     <slot name="sw-field-input" v-bind="{identification, error, disabled}"></slot>
-    {#<sw-field-error ></sw-field-error>#}
+    <sw-field-error :error="error"></sw-field-error>
 </div>
