--- a/Resources/administration/src/app/component/form/sw-checkbox-field/sw-checkbox-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-checkbox-field/sw-checkbox-field.html.twig
@@ -19,4 +19,5 @@
         <button v-if="inherited" class="sw-field__button-restore">{{ $tc('global.sw-field.buttonRestoreInheritance') }}</button>
         <sw-help-text v-if="helpText" :text="helpText"></sw-help-text>
     </span>
+    <sw-field-error :error="actualError"></sw-field-error>
 </div>
