--- a/Resources/administration/src/app/component/form/sw-price-field/sw-price-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-price-field/sw-price-field.html.twig
@@ -11,6 +11,7 @@
                       :size="compact ? 'small' : 'default'"
                       :min="0"
                       :digits="currency.decimalPrecision"
+                      :errorPointer="grossPointer"
                       @input-change="onPriceGrossChange"
                       v-bind="$attrs"
                       v-model="price.gross">
@@ -22,8 +23,8 @@
 
         {% block sw_price_field_lock_button %}
             <button class="sw-price-field__lock" :class="{ 'is--locked': price.linked }" @click="onLockSwitch">
-                <sw-icon name="default-lock-closed" size="16" v-if="price.linked"></sw-icon>
-                <sw-icon name="default-lock-open" size="16" v-else></sw-icon>
+                <sw-icon v-if="price.linked" key="price-field-locked-indicator" name="default-lock-closed" size="16" ></sw-icon>
+                <sw-icon v-else key="price-field-locked-indicator" name="default-lock-open" size="16"></sw-icon>
             </button>
         {% endblock %}
 
@@ -35,6 +36,7 @@
                       :min="0"
                       @input-change="onPriceNetChange"
                       :digits="currency.decimalPrecision"
+                      :errorPointer="netPointer"
                       v-bind="$attrs"
                       v-model="price.net">
                 <template #suffix>
