--- a/Resources/administration/src/module/sw-cms/elements/image/config/sw-cms-el-config-image.html.twig
+++ b/Resources/administration/src/module/sw-cms/elements/image/config/sw-cms-el-config-image.html.twig
@@ -24,6 +24,15 @@
             </sw-select-field>
         {% endblock %}
 
+        <template v-if="element.config.displayMode.value === 'cover'">
+            {% block sw_cms_element_image_config_min_height %}
+                <sw-text-field :label="$tc('sw-cms.elements.labelMediaMinHeight')"
+                               v-model="elMinHeight"
+                               @input="onChangeMinHeight">
+                </sw-text-field>
+            {% endblock %}
+        </template>
+
         {% block sw_cms_element_image_config_media_modal %}
             <sw-media-modal
                 variant="regular"
