NTR - Add CMS image element stretch option

--- a/Resources/administration/src/module/sw-cms/elements/image/component/sw-cms-el-image.scss
+++ b/Resources/administration/src/module/sw-cms/elements/image/component/sw-cms-el-image.scss
@@ -18,4 +18,11 @@
             height: 100%;
         }
     }
+
+    &.is--stretch {
+        img {
+            object-fit: fill;
+            width: 100%;
+        }
+    }
 }
