--- a/Resources/administration/src/module/sw-cms/elements/image/config/sw-cms-el-config-image.html.twig
+++ b/Resources/administration/src/module/sw-cms/elements/image/config/sw-cms-el-config-image.html.twig
@@ -21,6 +21,7 @@
             <sw-select-field :label="$tc('sw-cms.elements.labelMediaDisplayMode')" v-model="element.config.displayMode.value">
                 <option value="standard">{{ $tc('sw-cms.elements.labelMediaDisplayModeStandard') }}</option>
                 <option value="cover">{{ $tc('sw-cms.elements.labelMediaDisplayModeCover') }}</option>
+                <option value="stretch">{{ $tc('sw-cms.elements.labelMediaDisplayModeStretch') }}</option>
             </sw-select-field>
         {% endblock %}
 
