NTR - Add minor e2e fixes for process button

--- a/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
@@ -90,7 +90,7 @@
                                  :customerAddressCustomFieldSets="customerAddressCustomFieldSets"
                                  :customerCustomFieldSets="customerCustomFieldSets"
                                  :language="language"
-                                 :isLoading="isLoading"
+                                 :isLoading="isLoading || isSaveSuccessful"
                                  v-if="!isLoading"
                                  @activateCustomerEditMode="onActivateCustomerEditMode">
                     </router-view>
