NEXT-2426 - Create new base form fields

--- a/Resources/administration/src/app/assets/scss/variables.scss
+++ b/Resources/administration/src/app/assets/scss/variables.scss
@@ -17,6 +17,7 @@ $color-link-water: #FCFCFC;
 $color-light-gray: #F4F7FA;
 $color-gray: #9aa7be;
 $color-drag-select-box: rgba(0, 162, 255, .4);
+$color-purple: #7363E5;
 
 // Module colors
 $color-product: #57D9A3;
